# ICCAD-2023PD

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_script.sh
mcncbenchmark/fixed/: ami49_fixed_1.yal.txt
mcncbenchmark/soft/: kj.blocks  kj.nets  kj.pl
mcncbenchmark/soft_modified/: ami33.blocks  ami33.fixeds  ami33.nets  ami33.pl  ami49.blocks  ami49.nets  ami49.pl  apte.blocks  apte.nets  apte.pl  hp.blocks  hp.nets  hp.pl  xerox.blocks  xerox.nets  xerox.pl
src/: CMakeLists.txt  macro_placer_lib.cpp  macro_placer_lib.h  main.cpp
src/bounding/: CMakeLists.txt  bounding_line_handler_t.cpp  bounding_line_handler_t.h  bounding_line_t.cpp  bounding_line_t.h  circular_T_list_t.cpp  circular_T_list_t.h  circular_base_list_t.cpp  circular_base_list_t.h  puzzle_solver.cpp  puzzle_solver.h  puzzle_solver_t.cpp  puzzle_solver_t.h  unit_tester.cpp  unit_tester.h
src/output_data/: CMakeLists.txt  carver.cpp  carver.h  carver_t.cpp  carver_t.h  line_t.cpp  line_t.h  output_handler_t.cpp  output_handler_t.h  output_utility_t.cpp  output_utility_t.h
src/plugin/: CMakeLists.txt  answer_checker_t.cpp  answer_checker_t.h  argumentParser.cpp  argumentParser.h  visual_process_t.cpp  visual_process_t.h  visualizer_t.cpp  visualizer_t.h
src/polygon/: CMakeLists.txt  lenf_pf_t.cpp  lenf_pf_t.h  lenf_polygon_t.cpp  lenf_polygon_t.h  lenf_unit.cpp  lenf_unit.h  poly_union_unit_t.cpp  poly_union_unit_t.h  poly_unit_t.cpp  poly_unit_t.h  polygon_forest_t.cpp  polygon_forest_t.h  polygon_module_t.cpp  polygon_module_t.h  polygon_overlap_area_t.cpp  polygon_overlap_area_t.h  polygon_t.cpp  polygon_t.h
src/process/: CMakeLists.txt  ILP_solver_t.cpp  ILP_solver_t.h  LCS_helper_t.cpp  LCS_helper_t.h  SA_solver_t.cpp  SA_solver_t.h  case_table_t.cpp  case_table_t.h  edge_t.cpp  floorplan_t.cpp  floorplan_t.h  floorplanning_t.cpp  floorplanning_t.h  fp_evaluator_t.cpp  fp_evaluator_t.h  genetic_algo_t.cpp  genetic_algo_t.h  genetic_solver_t.cpp  genetic_solver_t.h  net_t.cpp  random_helper.cpp  random_helper.h  sequence_pair_enumerator_t.cpp  sequence_pair_enumerator_t.h  sequence_pair_t.cpp  sequence_pair_t.h  solver_t.cpp  solver_t.h  tester.cpp  tester.h  timer.cpp
src/process/components/: edge_t.h  net_t.h  timer.h
src/process/floorplan/: floorplan_t.cpp  floorplan_t.h  fp_evaluator_t.cpp  fp_evaluator_t.h
src/process/functional/: ILP_solver_t.cpp  ILP_solver_t.h  random_helper.cpp  random_helper.h
src/process/quad_sequence/: CMakeLists.txt  extended_module_t.cpp  extended_module_t.h  quad_sequence_t.cpp  quad_sequence_t.h
src/process/sequence_pair/: sequence_pair_enumerator_t.cpp  sequence_pair_enumerator_t.h  sequence_pair_t.cpp  sequence_pair_t.h  sp_ilp_settings_t.cpp  sp_ilp_settings_t.h
src/quadratic/: CMakeLists.txt  quadratic_t.cpp  quadratic_t.h
src/static_data/: CMakeLists.txt  chip_t.cpp  chip_t.h  fixed_module_t.cpp  fixed_module_t.h  fp_rule_t.cpp  fp_rule_t.h  module_t.cpp  module_t.h  soft_module_t.cpp  soft_module_t.h
src/static_data/mcnc/: CMakeLists.txt  mcnc_module_t.cpp  mcnc_module_t.h  module_network_t.cpp  module_network_t.h  multi_net_t.cpp  multi_net_t.h  pin_t.cpp  pin_t.h  signal_t.cpp  signal_t.h  testcase_changer_t.cpp  testcase_changer_t.h  yal_reader_t.cpp  yal_reader_t.h
src/static_data/mcnc_old/: CMakeLists.txt  mcnc_old_connection_t.h  mcnc_old_fixed_module_t.h  mcnc_old_module_t.h  mcnc_old_moudle_t.h  mcnc_old_reader_t.cpp  mcnc_old_reader_t.h  mcnc_old_soft_moudle_t.h  mcnc_old_terminal_t.h
src/utilities/: CMakeLists.txt  bounding_rectangle_t.cpp  bounding_rectangle_t.h  box_t.cpp  box_t.h  lenf_quadtree_t.cpp  lenf_quadtree_t.h  line_t.cpp  line_t.h  position_t.cpp  position_t.h  quadtree_t.cpp  quadtree_t.h  rect_t.cpp  rect_t.h  vec2d_t.cpp  vec2d_t.h
testcase/: Case01.txt  Case01_test_qs.txt  Case02.txt  Case02_test_qs.txt  Case03.txt  Case04.txt  Case05.txt  Case06.txt  README.TXT  case01-input.txt  case02-input.txt  case03-input.txt  case04-input.txt  case05-input.txt  case06-input.txt  case07-input.txt  case08-input.txt  case09-input.txt  case10-input.txt  custom-input.txt  custom-input2.txt  custom-input_full.txt  custom-input_full_soft.txt
testcase/polygon/: case01-ans.txt  case01-input.txt
